[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1.0.0"
]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.constcheck]
ignore_strings = [
  "DEFAULT",
  "DOTFILES",
  "file",
  "utf-8"
]

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = [
  "hin/__main__.py",
  "whitelist.py"
]

[tool.docsig]
check-class = true
summary = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.poetry]
authors = [
  "jshwi <stephen@jshwisolutions.com>"
]
description = "Dotfile manager"
documentation = "https://hin.readthedocs.io/en/latest"
homepage = "https://pypi.org/project/hin/"
keywords = [
  "config",
  "dot",
  "dotfile",
  "file",
  "hin"
]
license = "MIT"
maintainers = [
  "jshwi <stephen@jshwisolutions.com>"
]
name = "hin"
readme = "README.rst"
repository = "https://github.com/jshwi/hin"
version = "0.1.4"

[tool.poetry.dependencies]
appdirs = "^1.4.4"
click = "^8.1.3"
click-help-colors = "^0.9.1"
configobj = "^5.0.8"
gitpython = "^3.1.31"
python = "^3.8"
rich = "^13.3.5"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
deptry = "^0.11.0"
freezegun = "^1.2.2"
pre-commit = "^3.3.3"
pyaud = "^6.2.1"
pylint = "2.17.4"
pytest = "^7.2.0"
pytest-randomly = "^3.12.0"
pytest-sugar = "^0.9.6"
pytest-xdist = "^3.3.1"
restview = "^3.0.0"
sphinx-click = "^4.4.0"
sphinx-immaterial = "0.11.3"
sphinx-toolbox = "^3.4.0"
templatest = "^0.8.0"

[tool.poetry.scripts]
hin = "hin.__main__:main"

[tool.pyaud]
audit = [
  "commit-policy",
  "const",
  "format",
  "format-docs",
  "format-str",
  "imports",
  "lint",
  "params",
  "sort-pyproject",
  "test",
  "typecheck",
  "unused",
  "whitelist"
]
exclude = '''
  (?x)^(
    | docs\/conf\.py
    | whitelist\.py
  )$
'''

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--cov-report=term-missing",
  "--durations=5",
  "-n=auto",
  "-vv"
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = [
  ".git",
  ".idea",
  ".mypy_cache",
  ".pytest_cache",
  "docs"
]
